<resources>
    <string name="app_name">UniWay</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_forum">Foro</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_teachers">Profesores</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    
    <!-- Registro e Inicio de Sesión -->
    <string name="register_title">Registro</string>
    <string name="login_title">Iniciar Sesión</string>
    <string name="title_login">Iniciar Sesión</string>
    <string name="title_register">Registro</string>
    <string name="select_role">Selecciona tu rol</string>
    <string name="student">Estudiante</string>
    <string name="email_hint">Usuario</string>
    <string name="password_hint">Contraseña</string>
    <string name="confirm_password_hint">Confirmar contraseña</string>
    <string name="register_button">Registrarse</string>
    <string name="login_button">Iniciar Sesión</string>
    <string name="go_to_login">¿Ya tienes cuenta? Inicia sesión</string>
    <string name="go_to_register">¿No tienes cuenta? Regístrate</string>
    <string name="registration_successful">Registro exitoso</string>
    <string name="login_successful">Inicio de sesión exitoso</string>
    <string name="invalid_email">Correo electrónico inválido</string>
    <string name="password_mismatch">Las contraseñas no coinciden</string>
    <string name="empty_fields">Por favor completa todos los campos</string>
    
    <!-- Comentarios -->
    <string name="comment_hint">Escribe un comentario...</string>
    <string name="add_comment">Comentar</string>
    <string name="comments">Comentarios</string>
</resources>